--- a/inst/www/index.html
+++ b/inst/www/index.html
@@ -33,7 +33,7 @@
      <div class='row'>
        <div class='col-md-10 col-md-offset'>
        <h2>Sochi Olympics Medal Tally</h2>
-         <iframe id='sochi' width=100% height=700 seamless scrolling='no'></iframe>
+         <div id='sochi'></div>
        </div>
      </div>
    </div>
@@ -41,9 +41,9 @@
     
   </body>
   <script>
-  var req = ocpu.call("saveChart", {}, function(session){
-    console.log("Success")
-    $("#sochi").attr('src', session.getFileURL("output.html"));     
+  var req = ocpu.rpc("inlineChart", {}, function(output){
+    console.log("Success")    
+    $('#sochi').append(output)
   }).fail(function(text){
     alert("Error: " + req.responseText);
   });
