remove controls and reduce chart height

--- a/inst/www/index.html
+++ b/inst/www/index.html
@@ -32,8 +32,11 @@
    <div class='container'>
      <div class='row'>
        <div class='col-md-10 col-md-offset'>
-       <h2>Sochi Olympics Medal Tally</h2>
-         <div id='sochi'></div>
+        <h2>Sochi Olympics Medal Tally</h2>
+        <a href='http://rcharts.io' class="label label-primary">rCharts<a>
+        <a href='http://opencpu.org' class="label label-success">OpenCPU</a>
+        <a href='http://nvd3.org' class="label label-info">NVD3</a>
+        <div id='sochi'></div>
        </div>
      </div>
    </div>
