--- a/inst/www/index.html
+++ b/inst/www/index.html
@@ -4,7 +4,7 @@
 <html>
   <head>
     <title>Sochi Olympics App using OpenCPU</title>
-    <link href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" 
+    <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" 
       rel='stylesheet'>
     <link rel='stylesheet' href='nvd3/css/nv.d3.css'>
     <script src='nvd3/js/jquery-1.8.2.min.js' type='text/javascript'></script>
