add some info on how app was developed

--- a/inst/www/index.html
+++ b/inst/www/index.html
@@ -4,9 +4,8 @@
 <html>
   <head>
     <title>Sochi Olympics App using OpenCPU</title>
-    <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" 
-      rel='stylesheet'>
-    <link rel='stylesheet' href='nvd3/css/nv.d3.css'>
+    <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel='stylesheet'>
+    <link href='nvd3/css/nv.d3.css' rel='stylesheet' >
     <script src='nvd3/js/jquery-1.8.2.min.js' type='text/javascript'></script>
     <script src='nvd3/js/d3.v3.min.js' type='text/javascript'></script>
     <script src='nvd3/js/nv.d3.min-new.js' type='text/javascript'></script>
